Resolve drop down list not showing selection issue. Imported from Changeset 24

--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -88,14 +88,15 @@ h6,
 
 .form-control {
     font-size: 17px;
-    padding: 20px 15px;
+    padding: 0px 15px;
+    height: 42px;
     border-radius: 9px;
 }
 
 .form-control:focus {
     border-color: #2196f3;
-     -webkit-box-shadow: none; 
-     box-shadow: none; 
+    -webkit-box-shadow: none; 
+    box-shadow: none; 
 }
 
 .btn {
